# RustChatter

./: Cargo.toml
src/: lib.rs  main.rs
src/client/: mod.rs
src/server/: mod.rs
